--- a/src/scss/componets/_sidebar.scss
+++ b/src/scss/componets/_sidebar.scss
@@ -6,6 +6,12 @@
 	@extend %font-color;
 }
 
+.siedebar-title-state {
+	@extend %font-color;
+	font-size: 1.5em;
+	margin-top: 1rem;
+}
+
 .boxinfo {
 	&-row {
 		display: flex;
@@ -109,5 +115,45 @@
 	& .speed {
 		justify-content: center;
 		@include padding(1rem);
+	}
+}
+
+.hourly {
+	display: flex;
+	justify-content: space-around;
+	@include padding(1rem null);
+
+	& .item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	& span {
+		margin-top: 1rem;
+		text-align: center;
+		@extend %font-color;
+	}
+
+	& .progress-bar-vertical {
+		width: 0.35rem;
+		min-height: 20em;
+		display: flex;
+		align-items: flex-end;
+		background-color: rgba($color-font-sidebar, 0.15);
+
+		& .progress-bar {
+			width: 100%;
+			height: 0;
+			transition: height 0.6s ease;
+
+			&.red {
+				background-color: $color-red !important;
+			}
+
+			&.blue {
+				background-color: #146fd0 !important;
+			}
+		}
 	}
 }
