--- a/src/scss/componets/_daily_list.scss
+++ b/src/scss/componets/_daily_list.scss
@@ -1,38 +1,63 @@
 .daily-list {
 	display: flex;
-	align-items: flex-start;
+	// align-items: flex-start;
 	flex-direction: column;
-	justify-content: flex-start;
+	// justify-content: flex-start;
 
 	& .item {
 		display: flex;
-		align-items: center;
-		@include padding(0.5rem);
+		flex: 1 1 auto;
+		flex-direction: row;
+		width: 100%;
+		cursor: pointer;
 
-		&.bigitem {
-			flex: 0 0 30%;
-		}
-		&.miditem {
-			flex: 2;
-		}
-		&.smallitem {
-			flex: 1;
-			justify-content: center;
+		// display: flex;
+		// align-items: center;
+		// @include padding(0.5rem);
 
-			&:first-child {
-				justify-content: flex-start;
+		// &.bigitem {
+		// 	flex: 0 0 30%;
+		// }
+		// &.miditem {
+		// 	flex: 2;
+		// }
+		// &.smallitem {
+		// 	flex: 1;
+		// 	justify-content: center;
+
+		// 	&:first-child {
+		// 		justify-content: flex-start;
+		// 	}
+		// }
+
+		&-row {
+			// display: flex;
+			// flex: 1 1 auto;
+			// flex-direction: row;
+			// width: 100%;
+
+			display: flex;
+			align-items: center;
+			@include padding(0.5rem);
+
+			&.bigitem {
+				flex: 0 0 30%;
+			}
+			&.miditem {
+				flex: 2;
+			}
+			&.smallitem {
+				flex: 1;
+				justify-content: center;
+
+				&:first-child {
+					justify-content: flex-start;
+				}
 			}
 		}
 
-		&-row {
-			display: flex;
-			flex: 1 1 auto;
-			flex-direction: row;
-			width: 100%;
-		}
-
 		& .icon {
-			font-size: 3rem;
+			font-size: 2rem;
 		}
 	}
 
@@ -60,5 +85,75 @@
 		& .red {
 			background-color: $color-red !important;
 		}
+	}
+}
+
+$forecast-color: rgb(247, 247, 247) !default;
+
+.forecast-daily {
+	display: flex;
+	flex-wrap: wrap;
+	@include padding(1rem 0.5rem 2rem);
+
+	&__item {
+		display: inline-flex;
+		align-items: center;
+		justify-content: flex-start;
+		flex-grow: 1;
+		flex-shrink: 0;
+		flex-basis: calc(25% - 10px);
+		width: auto;
+		max-width: 100%;
+		overflow: hidden;
+		background-color: $bg-sidebar;
+		@include padding(0.5rem 1rem);
+		border-radius: 5px;
+		margin-right: 0.5rem;
+		margin-bottom: 0.5rem;
+
+		@include mediaa(maxslg) {
+			flex-basis: calc(33.333333333333333% - 10px);
+		}
+
+		@include mediaa(maxlg) {
+			flex-basis: calc(50% - 10px);
+		}
+
+		@include mediaa(maxxsm) {
+			flex-basis: calc(100% - 10px);
+		}
+	}
+
+	& .text--truncate {
+		display: flex;
+		flex-direction: column;
+
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+
+		& span {
+			color: $color-font-sidebar;
+		}
+	}
+
+	& .icon {
+		display: inline-block;
+		width: 1.5em;
+		height: 1.5em;
+		fill: $color-font-sidebar;
+		stroke: none;
+		vertical-align: middle;
+		margin-right: 1rem;
+		color: $color-font-sidebar;
+	}
+
+	& .dot {
+		display: inline-block;
+		width: 0.5em;
+		height: 0.5em;
+		border-radius: 50%;
+		vertical-align: middle;
+		margin-left: 0.5rem;
 	}
 }
