--- a/src/scss/componets/_daily_list.scss
+++ b/src/scss/componets/_daily_list.scss
@@ -1,8 +1,6 @@
 .daily-list {
 	display: flex;
-	// align-items: flex-start;
 	flex-direction: column;
-	// justify-content: flex-start;
 
 	& .item {
 		display: flex;
@@ -11,31 +9,7 @@
 		width: 100%;
 		cursor: pointer;
 
-		// display: flex;
-		// align-items: center;
-		// @include padding(0.5rem);
-
-		// &.bigitem {
-		// 	flex: 0 0 30%;
-		// }
-		// &.miditem {
-		// 	flex: 2;
-		// }
-		// &.smallitem {
-		// 	flex: 1;
-		// 	justify-content: center;
-
-		// 	&:first-child {
-		// 		justify-content: flex-start;
-		// 	}
-		// }
-
 		&-row {
-			// display: flex;
-			// flex: 1 1 auto;
-			// flex-direction: row;
-			// width: 100%;
-
 			display: flex;
 			align-items: center;
 			@include padding(0.5rem);
@@ -93,7 +67,7 @@ $forecast-color: rgb(247, 247, 247) !default;
 .forecast-daily {
 	display: flex;
 	flex-wrap: wrap;
-	@include padding(1rem 0.5rem 2rem);
+	@include padding(0.5rem);
 
 	&__item {
 		display: inline-flex;
@@ -111,16 +85,46 @@ $forecast-color: rgb(247, 247, 247) !default;
 		margin-right: 0.5rem;
 		margin-bottom: 0.5rem;
 
+		@include mediaa(minmlg) {
+			&:nth-of-type(4) {
+				margin-right: 0;
+			}
+
+			&:last-child {
+				margin-right: 0;
+			}
+
+			&:nth-last-of-type(-n + 3) {
+				margin-bottom: 0;
+			}
+		}
+
+		@include mediaa(minslg maxslg) {
+			&:nth-of-type(3n + 0) {
+				margin-right: 0;
+			}
+		}
+
 		@include mediaa(maxslg) {
 			flex-basis: calc(33.333333333333333% - 10px);
+
+			&:last-child {
+				margin-bottom: 0;
+				margin-right: 0;
+			}
 		}
 
 		@include mediaa(maxlg) {
 			flex-basis: calc(50% - 10px);
+
+			&:nth-of-type(even) {
+				margin-right: 0;
+			}
 		}
 
 		@include mediaa(maxxsm) {
 			flex-basis: calc(100% - 10px);
+			margin-right: 0;
 		}
 	}
 
