--- a/src/scss/componets/_base.scss
+++ b/src/scss/componets/_base.scss
@@ -4,7 +4,7 @@
 @import "wrapper";
 @import "sidebarmenu";
 @import "sidebar";
-@import "weather_menu";
+@import "find_city";
 @import "cityList";
 @import "daily_list";
 @import "auth";
