--- a/src/scss/componets/_find_city.scss
+++ b/src/scss/componets/_find_city.scss
@@ -29,4 +29,21 @@
 			}
 		}
 	}
+
+	& button {
+		@include padding(6px 12px);
+		margin-left: 1rem;
+		background-color: $bg-sidebar;
+		color: $color-font-sidebar;
+		border-radius: 0.5rem;
+		text-decoration: none;
+		font-weight: 500;
+		transition: opacity 0.3s ease-in-out;
+
+		&:hover {
+			color: $font-color;
+			background-color: $color-font-sidebar;
+			text-decoration: none;
+		}
+	}
 }
